syntax = "proto3";
package stateset.core.feemarket.v1;

option go_package = "github.com/stateset/core/x/feemarket/types";

import "gogoproto/gogo.proto";
import "cosmos_proto/cosmos.proto";

// Params defines the parameters for the feemarket module.
message Params {
  option (gogoproto.goproto_stringer) = false;

  // enabled defines whether the fee market is enabled.
  bool enabled = 1;

  // base_fee_change_denominator controls the rate of base fee adjustment.
  // Lower values lead to more rapid adjustments.
  uint64 base_fee_change_denominator = 2 [
    (gogoproto.moretags) = "yaml:\"base_fee_change_denominator\""
  ];

  // elasticity_multiplier defines the elasticity of the gas limit.
  // A higher multiplier allows more rapid increases in gas limit.
  uint64 elasticity_multiplier = 3 [
    (gogoproto.moretags) = "yaml:\"elasticity_multiplier\""
  ];

  // target_gas is the target gas used per block.
  // Base fee adjusts to maintain this target.
  uint64 target_gas = 4 [
    (gogoproto.moretags) = "yaml:\"target_gas\""
  ];

  // min_base_fee is the minimum base fee (in smallest denomination).
  string min_base_fee = 5 [
    (cosmos_proto.scalar) = "cosmos.Dec",
    (gogoproto.customtype) = "cosmossdk.io/math.LegacyDec",
    (gogoproto.nullable) = false,
    (gogoproto.moretags) = "yaml:\"min_base_fee\""
  ];

  // max_base_fee is the maximum base fee (in smallest denomination).
  string max_base_fee = 6 [
    (cosmos_proto.scalar) = "cosmos.Dec",
    (gogoproto.customtype) = "cosmossdk.io/math.LegacyDec",
    (gogoproto.nullable) = false,
    (gogoproto.moretags) = "yaml:\"max_base_fee\""
  ];

  // initial_base_fee is the starting base fee when the module is first enabled.
  string initial_base_fee = 7 [
    (cosmos_proto.scalar) = "cosmos.Dec",
    (gogoproto.customtype) = "cosmossdk.io/math.LegacyDec",
    (gogoproto.nullable) = false,
    (gogoproto.moretags) = "yaml:\"initial_base_fee\""
  ];
}
